# esch_old

./: .gitignore  README.md  esch.sh  library.bib  pyproject.toml  setup.py
esch/: __init__.py  cli.py  convert.py  curves.py  graphs.py  plot.py  worlds.py
esch/scripts/: book.sh  letter.sh  paper.sh  portfolio.sh  report.sh  resume.sh  slide.sh
filters/: bio.py  frames.py  header.lua  passthrough.py  tables.lua  tables.py
src/: daily.sh  letter.sh  magazine.sh  paper.sh  report.sh  resume.sh  slides.sh
templates/: article.tex  daily.tex  paper.tex  resume.tex  slide.tex
